In T7694, we have an improvement of spawning a process in GPGME.
Functions in libgpg-error should be improved too, so that those functions can be used in GPGME instead, eventually.
Description
Description
Revisions and Commits
Revisions and Commits
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Open | None | T7660 GPGME invocation by cri-o hangs on gpgme_op_verify | ||
| Resolved | • gniibe | T7696 POSIX: spawn fixes |