spawn:posix: Fix spawning a process on POSIX machine.

* src/spawn-posix.c (get_max_fds): Don't use _POSIX_OPEN_MAX, since
it's irrelevant;  It's a minimum value of OPEN_MAX.

--

GnuPG-bug-id: 7696
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>